clang/test/BSC/Negative/Ownership/Borrow/reborrow_restriction/reborrow_restriction.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

void read_by_value(int);
void read_by_borrow(const int *borrow);

void non_lexical_lifetime(int x) {
    int *borrow ref = &mut x;
    const int *borrow cref = ref; // expected-note {{`*ref` is borrowed here}}
    ++*ref; // expected-error {{cannot assign to `*ref` because it is borrowed}}
    read_by_value(*cref); 
}

void non_lexical_lifetime_limitation(int x) {
    int *borrow ref = &mut x; // expected-note {{`x` is borrowed here}}
    // explicitly define an immutable reference
    const int *borrow cref = ref;
    // ref does not expire here, even without any modification operations below
    read_by_value(x); // expected-error {{cannot use `x` because it was mutably borrowed}}
    read_by_value(*cref);
}

// re-borrow in function arguments
void accept_immutable(const int *borrow);
void accept_mutable(int *borrow);

// re-borrow when return value
int *ret_raw();
const int *borrow ret_immutable(const int *borrow);
int *owned ret_own();



void raw2immutable(int *ptr) {
    const int *borrow cref = ptr; // expected-error {{incompatible borrow types, cannot cast 'int *' to 'const int *borrow'}}
    accept_immutable(ptr); // expected-error {{incompatible borrow types, cannot cast 'int *' to 'const int *borrow'}}
    const int *borrow cref2 = ret_raw(); // expected-error {{incompatible borrow types, cannot cast 'int *' to 'const int *borrow'}}
}

int *owned own2immutable(int *owned ptr) {
    const int *borrow cref = ptr; // expected-error {{incompatible owned types, cannot cast 'int *owned' to 'const int *borrow'}}
    accept_immutable(ptr); // expected-error {{incompatible owned types, cannot cast 'int *owned' to 'const int *borrow'}}
    const int *borrow cref2 = ret_own(); // expected-error {{incompatible owned types, cannot cast 'int *owned' to 'const int *borrow'}}
    return ptr;
}

void immutable2mutable(const int *borrow cref) {
    int *borrow ref = cref; // expected-error {{incompatible borrow types, cannot cast 'const int *borrow' to 'int *borrow'}}
    accept_mutable(cref); // expected-error {{incompatible borrow types, cannot cast 'const int *borrow' to 'int *borrow'}}
    int dummy = 0;
    int *borrow ref2 = ret_immutable(&const dummy); // expected-error {{incompatible borrow types, cannot cast 'const int *borrow' to 'int *borrow'}}
}

void raw2mutable(int *ptr) {
    int *borrow ref = ptr; // expected-error {{incompatible borrow types, cannot cast 'int *' to 'int *borrow'}}
    accept_mutable(ptr); // expected-error {{incompatible borrow types, cannot cast 'int *' to 'int *borrow'}}
    int *borrow ref2 = ret_raw(); // expected-error {{incompatible borrow types, cannot cast 'int *' to 'int *borrow'}}
}

int *owned own2mutable(int *owned ptr) {
    int *borrow ref = ptr; // expected-error {{incompatible owned types, cannot cast 'int *owned' to 'int *borrow'}}
    accept_mutable(ptr); // expected-error {{incompatible owned types, cannot cast 'int *owned' to 'int *borrow'}}
    int *borrow ref2 = ret_own(); // expected-error {{incompatible owned types, cannot cast 'int *owned' to 'int *borrow'}}
    return ptr;
}

